--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@ function showDivs(n) {
 	{%block navbar%}
 	<div class="container">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="{%url 'psampler'%}">pLab</a>
+		  <a class="navbar-brand" href="{%url 'default'%}">pLab</a>
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 			  <a class="nav-item nav-link {%if app_name == 'psampler'%}active{%endif%}" href="{%url 'psampler'%}">pSampler <span class="sr-only">(current)</span></a>
