--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -1,22 +1,21 @@
 {%extends "base.html"%}
-{%block title%}<title>Classifier</title>{%endblock%}
+{%block title%}<title>{{app_name}}</title>{%endblock%}
 {%block content%}
 <!-- Sidebar/menu -->
 <div class="w3-sidebar w3-light-grey" style="z-index:3;width:260px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
     <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-transparent w3-display-topright"></i>
-    <h3>Classifier</h3>
+    <h3>{{app_name}}</h3>
     <hr>
     <form action="" target="_self">
-      <p><label><i class="fa fa-calendar-check-o"></i> Geometry input</label></p>
-      <input class="w3-input-high w3-border" type="text" placeholder="See FORMAT in 'Extra Info'" name="GeoInput" required>          
-      <p><label><i class="fa fa-calendar-o"></i> Check Out</label></p>
-      <input class="w3-input w3-border" type="text" placeholder="DD MM YYYY" name="CheckOut" required>         
-      <p><label><i class="fa fa-male"></i> Adults</label></p>
-      <input class="w3-input w3-border" type="number" value="1" name="Adults" min="1" max="6">              
-      <p><label><i class="fa fa-child"></i> Kids</label></p>
-      <input class="w3-input w3-border" type="number" value="0" name="Kids" min="0" max="6">
-      <p><button class="w3-button w3-block w3-green w3-left-align" type="submit" method="post"><i class="fa fa-search w3-margin-right"></i> Search availability</button></p>
+      <p> Geometry file:</p>
+	  <p><i> See FORMAT in 'Extra Info'</i></p>
+	  <input type="file" id="filechooser" required/>
+	  <hr>
+      <p> para</p>
+      <input class="w3-input w3-border" type="number" value="0" id="para" min="0" max="6">
+	  <hr>
+      <p><button class="w3-button w3-block w3-green" type="submit" method="post"> Search availability</button></p>
     </form>
   </div>
 </div>
@@ -31,21 +30,11 @@
   <div class="w3-hide-large" style="margin-top:80px"></div>
 
   <div class="w3-container">
-    <h4><strong>The space</strong></h4>
-    <div class="w3-row w3-large">
-      <div class="w3-col s6">
-        <p><i class="fa fa-fw fa-male"></i> Max people: 4</p>
-        <p><i class="fa fa-fw fa-bath"></i> Bathrooms: 2</p>
-        <p><i class="fa fa-fw fa-bed"></i> Bedrooms: 1</p>
-      </div>
-      <div class="w3-col s6">
-        <p><i class="fa fa-fw fa-clock-o"></i> Check In: After 3PM</p>
-        <p><i class="fa fa-fw fa-clock-o"></i> Check Out: 12PM</p>
-      </div>
-	  <hr>
-	  <br>
-	  <br>
-	  <p><button class="w3-button w3-green w3-third" onclick="document.getElementById('print_image').style.display='block'">Print image</button></p>
+    <div>
+		viewport
+		{%load static%}
+		<script type="text/javascript" src="{% static 'js/psampler/renderer.js' %}"></script>
+		<canvas id="canvas" width="700" height="400"></canvas>
     </div>
     <hr>
     
