--- a/templates/base.html
+++ b/templates/base.html
@@ -59,9 +59,9 @@ function showDivs(n) {
 		  <a class="navbar-brand" href="{%url 'default'%}">pLab</a>
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-			  <a class="nav-item nav-link {%if app_name == 'psampler'%}active{%endif%}" href="{%url 'psampler'%}">pSampler <span class="sr-only">(current)</span></a>
-			  <a class="nav-item nav-link {%if app_name == 'pflow'%}active{%endif%}" href="">pFlow</a>
-			  <a class="nav-item nav-link {%if app_name == 'classifier'%}active{%endif%}" href="{%url 'classifier'%}">Classifier</a>
+			  <a class="nav-item nav-link {%if app_name == 'pSampler'%}active{%endif%}" href="{%url 'psampler'%}">pSampler <span class="sr-only">(current)</span></a>
+			  <a class="nav-item nav-link {%if app_name == 'pFlow'%}active{%endif%}" href="">pFlow</a>
+			  <a class="nav-item nav-link {%if app_name == 'Classifier'%}active{%endif%}" href="{%url 'classifier'%}">Classifier</a>
 			</div>
 		  </div>
 		</nav>
