writing renderer.js; shader still not running

--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -37,7 +37,7 @@
 
   <div class="w3-container">
     <div>
-		<canvas id="canvas" width="700" height="400">Your browser doesn't support WebGL!</canvas>
+		<canvas id="canvas" width="800" height="500">Your browser doesn't support WebGL!</canvas>
     </div>
     <hr>
     
@@ -54,8 +54,10 @@
     <i class="fa fa-map-marker" style="width:30px"></i>Hu Fangyuan<br>
 	<i class="fa fa-map-marker" style="width:30px"></i>Koshizuka-Shibata-lab, the University of Tokyo<br>
     <i class="fa fa-envelope" style="width:30px"> </i> Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
-  <footer class="w3-container w3-padding-16" style="margin-top:32px">Powered by <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a></footer>
-  <footer class="w3-container w3-padding-16">css template from <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></footer>
+    <footer class="w3-container w3-padding-16">
+	  <p>Powered by <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a></p>
+	  <p>css template from <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></p>
+	</footer>
   </div>
 <!-- End page content -->
 </div>
