--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -7,17 +7,19 @@
 		<i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-transparent w3-display-topright"></i>
 		<h3>{{app_name}}</h3>
 		<hr>
+		<div id="drop_zone">
+			<p>Drop a geometry file here</p>
+			<p><i> See FORMAT in 'Extra Info'</i></p>
+		</div>
+		<div id="progress_bar"><div class="percent">0%</div></div>
+		<output id="list"></output>
+		<form action"" target="_self">
+			{% csrf_token %}
+			{{ form }}
+		</form>
+		<hr>
 		<form action="" target="_self">
-			<!-- <p> Geometry file:</p> -->
-			<!-- <p><i> See FORMAT in 'Extra Info'</i></p> -->
-			<!-- <input type="file" id="filechooser" required/> -->
-			<div id="drop_zone">
-				<p>Drop a geometry file here</p>
-				<p><i> See FORMAT in 'Extra Info'</i></p>
-			</div>
-			<div id="progress_bar"><div class="percent">0%</div></div>
-			<output id="list"></output>
-			<hr>
+			{% csrf_token %}
 			<p> para</p>
 			<input class="w3-input w3-border" type="number" value="1" id="para" min="0" max="6" required>
 			<hr>
@@ -43,20 +45,22 @@
     
     
     <h4><strong>Extra Info</strong></h4>
-    <p>View streamline & other quantities.</p>
-    <hr>
-	<p>Geometry input file format:</p>
+    <p>Draw streamline or other quantities. Only available for 2D now.</p>
+	<hr>
+	Input file <i>FORMAT</i> (text file only):<br>
+	<strong><i>Type X Y VX VY Scalar0 Scalar1 Scalar2 ...</i></strong>(add any number of scalars as you like)<br>
+	<strong><i>...</i></strong><br>
   </div>
   <hr>
   <!-- Contact -->
   <div class="w3-container" id="contact">
     <h4><strong>Contact</strong></h4>
-    <i class="fa fa-map-marker" style="width:30px"></i>Hu Fangyuan<br>
-	<i class="fa fa-map-marker" style="width:30px"></i>Koshizuka-Shibata-lab, the University of Tokyo<br>
-    <i class="fa fa-envelope" style="width:30px"> </i> Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
+    Hu Fangyuan<br>
+	Koshizuka-Shibata-lab, the University of Tokyo<br>
+    Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
+	Github: <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a><br>
     <footer class="w3-container w3-padding-16">
-	  <p>Powered by <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a></p>
-	  <p>css template from <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></p>
+	  <p>css template by: <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></p>
 	</footer>
   </div>
 <!-- End page content -->
