--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -43,11 +43,12 @@
     <hr>
     
     <h4><strong>Extra Info</strong></h4>
-    <p>Draw streamline or other quantities. Only available for 2D now.</p>
+    <p>Draw streamline or other quantities for point cloud datasets. Only available for 2D now.</p>
 	<hr>
 	Input file <i>FORMAT</i> (text file only):<br>
 	<strong><i>Type X Y VX VY Scalar0 Scalar1 Scalar2 ...</i></strong>(add as many columns of scalars as you like)<br>
 	<strong><i>...</i></strong><br>
+	<strong>The type of dummy points should always be 0.</strong><br>
   </div>
   <hr>
   <!-- Contact -->
@@ -66,8 +67,8 @@
 {% load static %}
 <!-- <script id="vertex-shader" type="x-shader/x-vertex" src="{% static 'js/psampler/vertex-shader.glsl' %}"></script> -->
 <!-- <script id="fragment-shader" type="x-shader/x-fragment" src="{% static 'js/psampler/fragment-shader.glsl' %}"></script> -->
-<script type="text/javascript" src="{% static 'js/psampler/renderer.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/interpolator.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/psampler/renderer.js' %}"></script>
 <script type="text/javascript">
 	if(window.File && window.FileReader && window.FileList && window.Blob){
 		//All the File APIs are supported.
