--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -2,8 +2,9 @@
 {%block title%}<title>{{app_name}}</title>{%endblock%}
 {%block content%}
 <!-- Sidebar/menu -->
-<div class="w3-sidebar w3-light-grey" style="z-index:3;width:260px" id="mySidebar">
-	<div class="w3-container w3-display-container w3-padding-16">
+<div>
+	<div class="w3-sidebar w3-light-grey" style="z-index:3;width:260px" id="mySidebar">
+	<div class="w3-container w3-display-container w3-padding-64">
 		<h3>{{app_name}}</h3>
 		<hr>
 		<div id="drop_zone">
@@ -13,8 +14,10 @@
 		<div id="progress_bar"><div class="percent">0%</div></div>
 		<output id="list"></output>
 		<form action"" target="_self">
-			{% csrf_token %}
-			{{ form.as_table }}
+			<div class="form-group">
+				{% csrf_token %}
+				{{ form }}
+			</div>
 		</form>
 		<hr>
 		<form action="" target="_self">
@@ -36,65 +39,66 @@
 				{{ form_sl.rsln }}
 			</div>
 			<br>
-			<div class="w3-half">
-				{{ form_sl.p1x.label }}
-				{{ form_sl.p1x }}				
+			<div class="row">
+				<div class="col">
+					{{ form_sl.p1x.label }}
+					{{ form_sl.p1x }}				
+				</div>
+				<div class="col">
+					{{ form_sl.p2x.label }}
+					{{ form_sl.p2x }}
+				</div>
 			</div>
-			<div class="w3-half">
-				{{ form_sl.p2x.label }}
-				{{ form_sl.p2x }}
-			</div>
-			<div class="w3-half">
-				{{ form_sl.p1y.label }}
-				{{ form_sl.p1y }}				
-			</div>
-			<div class="w3-half">
-				{{ form_sl.p2y.label }}
-				{{ form_sl.p2y }}
+			<div class="row">
+				<div class="col">
+					{{ form_sl.p1y.label }}
+					{{ form_sl.p1y }}				
+				</div>
+				<div class="col">
+					{{ form_sl.p2y.label }}
+					{{ form_sl.p2y }}
+				</div>
 			</div>
 			<br>
-			<input type="checkbox" id="mode" data-toggle="toggle" data-width="225" data-onstyle="primary" data-offstyle="success" data-on="Streamline mode" data-off="Point mode">
+			<div class="row">
+				<input class="col" type="radio" name="options" id="point" checked> Point
+				<input class="col" type="radio" name="options" id="streamline"> Streamline
+			</div>
+			</div>
 		</form>
 		<hr>
 	</div>
-</div>
+	</div>
 
-<!-- Overlay effect when opening sidebar on small screens -->
-<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+	<div style="margin-left:260px"> 
+		<div class="container">
+			<div>
+				<canvas id="canvas" width="800" height="500" class="w3-border">Your browser doesn't support WebGL!</canvas>
+			</div>
+			<hr>
 
-<!-- !PAGE CONTENT! -->
-<div class="w3-main w3-white" style="margin-left:260px">
-
-  <!-- Push down content on small screens -->
-  <div class="w3-hide-large" style="margin-top:80px"></div>
-
-  <div class="w3-container">
-    <div>
-		<canvas id="canvas" width="800" height="500" class="w3-border">Your browser doesn't support WebGL!</canvas>
-    </div>
-    <hr>
-    
-    <h4><strong>Extra Info</strong></h4>
-    <p>Draw streamline or other quantities for point cloud datasets. Only available for 2D now.</p>
-	<hr>
-	Input file <i>FORMAT</i> (text file only):<br>
-	<strong><i>Type X Y VX VY Scalar0 Scalar1 Scalar2 ...</i></strong>(add as many columns of scalars as you like)<br>
-	<strong><i>...</i></strong><br>
-	<strong>The type of dummy points should always be 0.</strong><br>
-  </div>
-  <hr>
-  <!-- Contact -->
-  <div class="w3-container" id="contact">
-    <h4><strong>Contact</strong></h4>
-    Hu Fangyuan<br>
-	Koshizuka-Shibata-lab, the University of Tokyo<br>
-    Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
-	Github: <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a><br>
-    <footer class="w3-container w3-padding-16">
-	  <p>css template by: <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></p>
-	</footer>
-  </div>
-<!-- End page content -->
+			<h4><strong>Extra Info</strong></h4>
+			<p>Draw streamline or other quantities for point cloud datasets. Only available for 2D now.</p>
+			<hr>
+			Input file <i>FORMAT</i> (text file only):<br>
+			<strong><i>Type X Y VX VY Scalar0 Scalar1 Scalar2 ...</i></strong>(add as many columns of scalars as you like)<br>
+			<strong><i>...</i></strong><br>
+			<strong>The type of dummy points should always be 0.</strong><br>
+		</div>
+		<hr>
+		<!-- Contact -->
+		<div class="container" id="contact">
+			<h4><strong>Contact</strong></h4>
+			Hu Fangyuan<br>
+			Koshizuka-Shibata-lab, the University of Tokyo<br>
+			Email: hfy8373_at_mps.q.t.u-tokyo.ac.jp<br>
+			Github: <a href="https://github.com/dlut414" target="_blank" class="w3-hover-text-green">dlut414</a><br>
+			<footer class="w3-container w3-padding-16">
+			  <p>css template by: <a href="https://www.w3schools.com" target="_blank" class="w3-hover-text-green">w3schools</a> & <a href="http://getbootstrap.com/" target="_blank" class="w3-hover-text-green">bootstrap</a></p>
+			</footer>
+		</div>
+	</div>
+	<!-- End page content -->
 </div>
 {% load static %}
 <!-- <script id="vertex-shader" type="x-shader/x-vertex" src="{% static 'js/psampler/vertex-shader.glsl' %}"></script> -->
@@ -144,10 +148,10 @@
 		evt.preventDefault();
 		var output = [];
 		var f = evt.dataTransfer.files[0];
-		<!-- output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ', -->
-					<!-- f.size, ' bytes, last modified: ', -->
-					<!-- f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a', -->
-					<!-- '</li>'); -->
+		output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
+					f.size, ' bytes, last modified: ',
+					f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
+					'</li>');
 		document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
 		
 		// Reset progress indicator on new file selection.
@@ -158,7 +162,7 @@
 		reader.onprogress = updateProgress;
 		reader.onloadstart = function(e){
 			document.getElementById('progress_bar').className = 'loading';
-			$('#mode').bootstrapToggle('off');
+			$('#point').prop('checked');
 		};
 		reader.onload = function(e){
 			// Ensure that the progress bar displays 100% at the end.
