--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -80,3 +80,16 @@ input:checked + .slider:before {
 .slider.round:before {
 	border-radius: 50%;
 }
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
