fixed bugs in radio button listener

--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -60,9 +60,9 @@
 				</div>
 			</div>
 			<br>
-			<div class="row">
-				<input class="col" type="radio" name="options" id="point" checked> Point
-				<input class="col" type="radio" name="options" id="streamline"> Streamline
+			<div id="mode" class="row">
+				<input class="col" type="radio" name="option" id="point" checked> Point
+				<input class="col" type="radio" name="option" id="streamline"> Streamline
 			</div>
 			</div>
 		</form>
