started app pFlow

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 		  <a class="navbar-brand" href="{%url 'default'%}">pLab</a>
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-			  <a class="nav-item nav-link {%if app_name == 'pSampler'%}active{%endif%}" href="{%url 'psampler'%}">pSampler <span class="sr-only">(current)</span></a>
-			  <a class="nav-item nav-link {%if app_name == 'pFlow'%}active{%endif%}" href="">pFlow</a>
+			  <a class="nav-item nav-link {%if app_name == 'pSampler'%}active{%endif%}" href="{%url 'psampler'%}">pSampler</a>
+			  <a class="nav-item nav-link {%if app_name == 'pFlow'%}active{%endif%}" href="{%url 'pflow'%}">pFlow</a>
 			  <a class="nav-item nav-link {%if app_name == 'Classifier'%}active{%endif%}" href="{%url 'classifier'%}">Classifier</a>
 			</div>
 		  </div>
