fixed bug when in small display, changed the css

--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -4,7 +4,7 @@
 <div class="container">
 	<!-- Sidebar/menu -->
 	<div class="w3-sidebar w3-light-grey" style="z-index:3;width:260px;" id="mySidebar">
-		<div class="w3-container w3-display-container w3-padding-16">
+		<div class="w3-container w3-display-container" style="padding-top:16px!important;padding-bottom:64px!important">
 			<h3>{{app_name}}</h3>
 			<hr>
 			<div id="drop_zone">
