added functionality to display inf. about a point picked

--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -76,6 +76,7 @@
 			<div>
 				<canvas id="canvas" width="800" height="500" class="w3-border">Your browser doesn't support WebGL!</canvas>
 			</div>
+			<output id="attribPanel" style="z-index:2;display:none;"></output>
 			<hr>
 
 			<h4><strong>Extra Info</strong></h4>
