added a sample download link (stored in github) to pSampler

--- a/pSampler/templates/pSampler/index.html
+++ b/pSampler/templates/pSampler/index.html
@@ -85,10 +85,10 @@
 				Try something! You won't break it!
 			</p>
 			<hr>
-			Input file <i>FORMAT</i> (text file only):<br>
-			<strong><i>Type X Y VX VY Scalar0 Scalar1 Scalar2 ...</i></strong>(add as many columns of scalars as you like)<br>
+			Input file <i>FORMAT</i> (text file only): <a href="https://github.com/dlut414/pLab/files/1503931/data.txt" download><strong>Sample</strong></a><br>
+			<strong><i>Type X Y VX VY S0 S1 S2 ...</i></strong>(add as many columns of scalars as you like)<br>
 			<strong><i>...</i></strong><br>
-			<strong>The type of dummy points should always be 0.</strong><br>
+			The type of dummy points should always be 0.<br>
 		</div>
 		<hr>
 		<!-- Contact -->
